[package]
name    = "vault-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

# Crates that mirror the @noble AEAD/hash stack used in nip44.ts.
# ML-KEM is tested by @noble/post-quantum's own suite;
# here we verify the packet format and AEAD authentication boundary.
[dependencies]
chacha20poly1305 = "0.10"
sha2             = "0.10"
rand             = { version = "0.8", features = ["std_rng"] }
once_cell        = "1"

# ── Library (shared logic + tests) ───────────────────────────────────────────
# cargo test                          → run unit tests
# cargo +nightly fuzz run <name>      → run a fuzz target (from this dir)

[lib]
name = "vault_fuzz"
path = "src/lib.rs"
